--- a/Pagorn-Resume-iOS/Base.lproj/Main.storyboard
+++ b/Pagorn-Resume-iOS/Base.lproj/Main.storyboard
@@ -1,15 +1,93 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="12118" systemVersion="16F73" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ksw-X0-Xm3">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="13529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" colorMatched="YES" initialViewController="Ksw-X0-Xm3">
     <device id="retina4_7" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="12086"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="13527"/>
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--Item 2-->
+        <scene sceneID="aXM-WH-VQ4">
+            <objects>
+                <viewController id="VH1-n5-lYF" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="yMn-21-sdd"/>
+                        <viewControllerLayoutGuide type="bottom" id="KZ9-QW-BkG"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="lEF-Dd-O4N">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="1" green="0.50965378120000004" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 2" id="pv2-TW-b9d"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="E6S-nB-QzI" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="449" y="208"/>
+        </scene>
+        <!--Item-->
+        <scene sceneID="bgk-73-4Qt">
+            <objects>
+                <viewController id="pIc-Jr-Eab" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="3Bl-40-PE9"/>
+                        <viewControllerLayoutGuide type="bottom" id="Hce-Hz-0yr"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="5QK-FV-G8e">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="1dR-Eh-fXw"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="gDa-Bf-cw1" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-274" y="888"/>
+        </scene>
+        <!--Item 1-->
+        <scene sceneID="3qQ-Ke-T6d">
+            <objects>
+                <viewController id="pM3-fd-nuh" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="vwJ-6r-3Rk"/>
+                        <viewControllerLayoutGuide type="bottom" id="bhS-NB-d4D"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="zIe-xk-4II">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" red="0.56543179509999997" green="1" blue="0.0" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="Item 1" id="1Am-NE-cW7"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="0fz-BG-Dss" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="449" y="-712"/>
+        </scene>
+        <!--Tab Bar Controller-->
+        <scene sceneID="sHm-la-h9Z">
+            <objects>
+                <tabBarController id="gAa-MG-ZAv" sceneMemberID="viewController">
+                    <navigationItem key="navigationItem" id="jzS-YL-xUg"/>
+                    <tabBar key="tabBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="a00-6b-vsM">
+                        <rect key="frame" x="0.0" y="0.0" width="375" height="49"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                        <color key="backgroundColor" white="0.0" alpha="0.0" colorSpace="calibratedWhite"/>
+                    </tabBar>
+                    <connections>
+                        <segue destination="pM3-fd-nuh" kind="relationship" relationship="viewControllers" id="a7S-r2-3mI"/>
+                        <segue destination="VH1-n5-lYF" kind="relationship" relationship="viewControllers" id="qzY-5n-Tey"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="viewControllers" id="CNI-ua-uKw"/>
+                        <segue destination="pIc-Jr-Eab" kind="relationship" relationship="viewControllers" id="By8-14-4M2"/>
+                    </connections>
+                </tabBarController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="wxy-Cj-qOE" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-503" y="-237"/>
+        </scene>
+        <!--Item-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="Pagorn_Resume_iOS" customModuleProvider="target" sceneMemberID="viewController">
@@ -20,13 +98,14 @@
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="1" green="0.35757412529999999" blue="0.78291471489999998" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                     </view>
+                    <tabBarItem key="tabBarItem" title="Item" id="WnD-Go-5p2"/>
                     <navigationItem key="navigationItem" id="8SK-AS-E75"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1056.8" y="122.78860569715144"/>
+            <point key="canvasLocation" x="1238" y="-237"/>
         </scene>
         <!--Navigation Controller-->
         <scene sceneID="dg3-do-Sq4">
@@ -34,17 +113,17 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="Ksw-X0-Xm3" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="4G4-fI-2Xp">
-                        <rect key="frame" x="0.0" y="0.0" width="375" height="44"/>
+                        <rect key="frame" x="0.0" y="20" width="375" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="gJA-so-QM6"/>
+                        <segue destination="gAa-MG-ZAv" kind="relationship" relationship="rootViewController" id="8kR-iE-Y7P"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SYJ-cR-81b" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="109.59999999999999" y="776.76161919040487"/>
+            <point key="canvasLocation" x="-1286" y="-237"/>
         </scene>
     </scenes>
 </document>
